add:看完第8、9章，开始看第10章简化条件逻辑

--- a/_posts/重构2/2022-08-15-重构的关键理念.md
+++ b/_posts/重构2/2022-08-15-重构的关键理念.md
@@ -59,7 +59,7 @@ typora-root-url: ..
 
 - 改进程序的一个重要方向就是消除重复代码 - 代码量少并不会使系统运行更快，但是将会**使可能的程序修改动作容易得多** - 代码越多，要理解的代码就越多，修改就越困难
 
-13、想清楚两件事：本次调整的目标是什么，以及该目标能否达到？
+13、想清楚两件事：本次调整的目标是什么，以及该目标能否达到（是否会产生干扰、改变程序的可观测行为）？
 
 14、一般来说，重构早期的主要动力是**尝试理解代码如何工作**。通常你需要先通读代码，找到一些感觉，然后再通过重构将这些感觉从脑海里搬回到代码中。
 
