--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -310,9 +310,17 @@ const manager = aPerson.manager;
 
 
 
+#### 搬移语句到函数（213）
+
+代码库的健康发展依赖着一些黄金守则，其中一条就是 -> 消除重复。
+
+- 时机：调用某个函数时，总有相同的代码需要执行，就可以考虑将此段代码搬移进函数里头 -> 日后对这段代码的修改只需修改一处地方，对所有调用者都生效 -> 如果将来不同调用者有不同的行为，再搬移出来也十分简单
+
+
+
 #### 搬移语句到调用者（217）
 
-- 时机：函数边界偏移 - 以往很多地方共用的行为，如今某些调用点表现出不同行为
+- 时机：随着系统能力演进，函数边界可能会偏移 - 以往很多地方共用的行为，如今某些调用点表现出不同行为
 - 做法：1、提炼函数 - 将希望保留的函数功能提取到一个临时函数 -> 2、内联函数，移除函数 -> 3、将临时函数重命名为原函数名字
 - 案例：
 
@@ -345,17 +353,17 @@ const appliesToMass = states.includes("MA");
 
 #### 拆分循环（227）
 
-一个循环只做一件事
+一个循环只做一件事 -> 意义不在于拆分循环本身，而在于为进一步优化提供良好的起点
 
 - 时机：在代码中，存在一些为了只循环一次，在一个循环里面做了很多事，每当修改时，需要理解循环里面的每件事
 
-- 步骤：1、复制一遍循环代码 --> 2、识别移除重复代码，使每个循环只做一件事 --> 3、进行重构，再进行性能优化（斟酌）
+- 步骤：1、复制一遍循环代码 --> 2、识别移除重复代码，使每个循环只做一件事 --> 3、先进行重构，再进行性能优化（斟酌）
 
 
 
 #### 以管道取代循环（231）
 
-集合管道：使用一组运算来描述集合的迭代过程，入参和返回值都是一个集合
+集合管道：使用一组运算来描述集合的迭代过程，其中每种运算的入参和返回值都是一个集合
 
 - 案例 1：累积场景 -> <u>善于利用 reduce 本身自带的循环</u>
 
@@ -393,6 +401,14 @@ const name = input
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818213823078.png" alt="image-20220818213823078" style="zoom:67%;" />
 
 
+
+#### 移除死代码
+
+对于一些无用代码，之前业界的处理态度都是注释，但是完全可以通过版本控制找到对应代码，放心删除
+
+
+
+### 第9章 重新组织数据
 
 #### 拆分变量（240）
 
@@ -452,6 +468,37 @@ const org = new Org({title: "Alice", city: "HangZhou"});
 
 - 步骤：1、找到所有对变量做更新的点 -> 2、新建一个函数，专门用于计算当前变量的值 -> 3、测试、替换、删除死代码
 
+- 案例：
+
+```react
+class plan {
+  get pord() { return this._prod;}
+  ajust(anAjust) {
+    this._ajust.push(anAjust);
+    this._prod += anAjust.amount;
+  }
+}
+// --> 中间步骤：拎出一个单一函数计算 _prod 的值
+class plan {
+  get pord() { 
+    assert(this._prod === this.calculate); // 通过断言保证准确性
+    return this.calculate;
+  }
+  get calculate() {
+    return this._ajust.reduce((sum, a) => sum + a.amount, 0);
+  }
+}
+// --> 改为
+class plan {
+  get pord() { 
+		return this._ajust.reduce((sum, a) => sum + a.amount, 0);
+  }
+  ajust() {
+    this._ajust.push(anAjust);
+  }
+}
+```
+
 
 
 #### 将引用对象改为值对象（252）
@@ -462,7 +509,7 @@ const org = new Org({title: "Alice", city: "HangZhou"});
 
 - 场景：值对象在分布式系统、并发系统中尤为有用，因为值对象是不可变的数据结构，不必操心维护内存链接
 - 步骤：1、把对象改为值对象，对它的字段运用移除设值函数：把这两个字段的初始值加到构造函数中，并迫使构造函数调用设值函数 -> 2、逐一查看设值函数的调用者，并将其改为重新赋值整个对象 -> 3、此时修改的对象已经是不可变的类， 将其变成真正的值对象 - 提供基于值判断相等性的函数
-- <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818214305879.png" alt="image-20220818214305879" style="zoom:37%;" />
+- <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818214305879.png" alt="image-20220818214305879" style="zoom:27%;" />
 - 案例：在类初始化的时候使用设值函数
 
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818214404059.png" alt="image-20220818214404059" style="zoom:80%;" />
@@ -500,9 +547,11 @@ export function findCustomer(id) {
 
 
 
+### 第10章 简化条件逻辑
+
 #### 分解条件表达式（260） - 提炼函数的一个应用场景
 
-条件逻辑会使代码很难阅读，需要理解两部分：检查条件分支的代码和实现功能的代码 -> 提炼函数，让条件分支清晰，再利用函数名称明确功能
+条件逻辑会使代码很难阅读，需要理解两部分：检查条件分支的代码、实现功能的代码 -> 提炼函数，让条件分支清晰，再利用函数名称明确功能
 
 - 技巧：条件判断比较复杂的时候，就抽离一个独立函数专门用于计算判断条件 -> 简单的分支逻辑可以被三元运算符替代
 - 案例：具体函数就不放了，放一下提炼后的结果，含义很明确
@@ -510,6 +559,39 @@ export function findCustomer(id) {
 ```react
 const charge = summer() ? summerCharge() : regularCharge();
 ```
+
+
+
+#### 合并条件表达式（263）
+
+将罗列的条件明确成“多个并列条件需要检查”的含义 -> 这个重构从描述“做什么”的语句，换成了“为什么这样做”的代码
+
+- 时机：遇到一串条件检查 ，它们的检查条件不同，但是最终行为却一致 -> 使用 逻辑或、逻辑与 合并条件表达式
+
+- 案例
+
+```react
+if (anEmployee.seniority < 2) return 0; 
+if (anEmployee.monthsDisabled > 12) return 0; 
+if (anEmployee.isPartTime) return 0;
+// --> 改为
+if ((anEmployee.seniority < 2) || (anEmployee.monthsDisabled > 12) || (anEmployee.isPartTime)) return 0;
+// --> 可以进一步改为：独立条件表达式为一个判断函数
+if (isNotEligableForDisability()) return 0;
+function isNotEligableForDisability() { return ((anEmployee.seniority < 2) || (anEmployee.monthsDisabled > 12) || (anEmployee.isPartTime)); }
+```
+
+
+
+#### 以卫语句取代嵌套条件表达式（266）
+
+给某一条分支以特别的重视 -> 明确这不是本函数的核心逻辑所关心的
+
+- 时机：一个条件分支是正常行为，另一个分支是异常情况的条件表达式 -> 特殊情况应该单独检查该条件，这样的单独检查常常被称为卫语句
+- 技巧：常常以将条件表达式反转，从而实现以卫语句取代嵌套条件表达式
+- 案例
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220906220508480.png" alt="image-20220906220508480" style="zoom:70%;" />
 
 
 
