add：第10章阅读完成。。其实都是之前看过的名录，开始阅读第11章

--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -599,17 +599,57 @@ function isNotEligableForDisability() { return ((anEmployee.seniority < 2) || (a
 
 复杂的条件逻辑（常见于 switch 函数） -> 类和多态，但是注意不要滥用，只针对复杂逻辑
 
-- switch ： 针对 switch 语句每个分支逻辑都创建一个类，用多态来承载各个类型特有的行为
--  技巧：一般是有一个基础逻辑，在其上又有一些变体
+- 时机 ： 针对 switch 语句每个分支逻辑都创建一个类，用多态来承载各个类型特有的行为；或者遇到有一个基础逻辑，在其上又有一些变体
+- 方法：把基础逻辑放到超类，各种变体逻辑单独在子类实现
 - 案例：基础类 Bird ，在其之上再根据 switch 添加一些变体
 
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818215216985.png" alt="image-20220818215216985" style="zoom:37%;" />
 
 
 
+#### 引入特例/引入null对象（289）
+
+一种常见的重复代码是在处理某个特殊值，可以将处理逻辑收拢到一处
+
+- 步骤：创建一个特例元素，表达对这种特例的共用行为的处理
+- 案例：特例对象应该是始终不变的
+
+```react
+// 新建一个特例类
+class UnknownCustomer { 
+  get isUnknown() { return true }
+  get name() { return 'occupant' }
+  get plan() { return registry.plans.basic }
+  
+  set plan(arg) { /* 保留设值函数，但其中什么都不做 */ }
+}
+
+// 给原来的类添加一个 isUnknown 的属性
+class Customer { get isUnknown() {return false;} }
+
+// 修改创建 customer 的地方
+class Site {
+  get customer() { 
+    return (this._customer === "unknown") ? new UnknownCustomer() : this._customer; 
+  }
+}
+
+// 调用形式
+if(aCustomer.isUnknown) xxxxxx;
+const customerName = aCustomer.name; // 由于特殊类已经将 name 返回，所以不需要判断逻辑了
+const plan = aCustomer.plan;
+aCustomer.plan = newPlan;
+```
+
+
+
+### 第11 章 重构 API
+
 #### 将查询函数和修改函数分离（306）
 
-保证调用者不会调用到有副作用的代码
+保证调用者不会调用到有副作用（调用时会修改无关的数据）的代码
+
+- 原则：任何有返回值的函数，都不应该有看得到的副作用（命名与查询分离）
 
 
 
@@ -639,7 +679,7 @@ const amount = withinBand(usage, 0, 100) * 0.03
 
 #### 移除标记参数/以明确函数取代参数（314）
 
-标记参数是指：被调用者用来指示函数应该执行哪一部分的逻辑（影响了内部的控制流） -> 会增加后续使用者的理解成本：难以理解一个函数该如何调用，可以调用执行哪部分代码  -> 标记参数隐藏了函数调用中存在的差异性
+标记参数是指：被调用者用来指示函数应该执行哪一部分的逻辑（影响了内部的控制流） -> 会增加后续使用者的理解成本：难以理解一个函数该如何调用，可以调用执行哪部分代码  -> <u>标记参数隐藏了函数调用中存在的差异性</u>
 
 - 时机：遇到不能清晰得传达含义的标记参数就可以重构，布尔型的标记尤其糟糕
 - 目的：用明确的一个函数来完成一项单独的任务
