add：阅读12章，有点烦躁，12.7 开始需要重新看

--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -701,9 +701,11 @@ function regularDeliveryDate(anOrder) {return deliveryDate(anOrder, false);}
 
 
 
-#### 以查询取代参数/以参数取代参数（324）
+#### 以查询取代参数/以参数取代查询（324/327）
 
-去除重复参数（如果传入的参数，函数自己也能轻易计算获得，这也是一种重复）
+去除重复参数（如果传入的参数，函数自己也能轻易计算获得，这也是一种重复） -> 原则：把责任移交给函数本身，简化调用方 / 
+
+反向重构时，一般是改变代码的依赖关系的情况 -> 原则：将处理引用关系的责任转交给调用方
 
 
 
@@ -716,6 +718,8 @@ function regularDeliveryDate(anOrder) {return deliveryDate(anOrder, false);}
 #### 以工厂函数取代构造函数（334）
 
 工厂函数的内部实现可以调用构造函数或者换成别的方式实现，并实现使用清晰的函数名称明确功能，也不需要使用特殊关键词（new）
+
+- 本质：使用函数包裹构造函数，事该函数变成工厂函数
 
 - 案例：
 
@@ -743,6 +747,32 @@ const leadEngineer = createEmployee(document.leadEngineer, 'E');
 
 
 
+#### 以命令取代构造函数/以函数取代命令（337/344）
+
+命令对象可以提供方法来设置命令的参数值，从而支持更丰富的生命周期管理（命令对象一般比较复杂，包含了多个函数，彼此之间通过字段共享状态） -> 如果函数不复杂，则不适用
+
+
+
+### 第12章 处理继承关系
+
+#### 函数上移/字段上移（350/353）
+
+如果有一些逻辑/特性在子类中重复出现，则适合将函数上移到超类中
+
+
+
+#### 构造函数本体上移（355）
+
+构造函数比较特殊，如果子类存在重复，在超类中定义/使用构造函数 -> 需要在子类中调用超类的构造函数 super();
+
+
+
+#### 函数下移/字段下移（359/361）
+
+只在某些子类中关心的逻辑/字段 ，可以直接下放到子类
+
+
+
 #### 以子类取代类型码（362）
 
 有点像 272 的以多态取代条件表达式
@@ -750,6 +780,10 @@ const leadEngineer = createEmployee(document.leadEngineer, 'E');
 - 案例：和 272 案例很像
 
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220818215352219.png" alt="image-20220818215352219" style="zoom:80%;" />
+
+
+
+#### 移除子类（369）
 
 
 
