add：全书看完两遍，开始整理分享逻辑

--- a/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
+++ b/_posts/重构2/2022-08-17-重构中的方法论（名录）.md
@@ -785,9 +785,23 @@ const leadEngineer = createEmployee(document.leadEngineer, 'E');
 
 #### 移除子类（369）
 
+如果子类的用处太少，就不值得存在了 -> 替换为超类中的一个字段
 
 
 
+#### 以委托取代子类（381）
+
+继承的缺点：只能用于处理一个方向上的变化 -> 例如人可以根据「年龄段」划分成“年轻人”和“老人”，但是如果我还想根据「性别」划分，就需要另一套继承体系了
+
+流行的原则：对象组合（委托）优于继承
+
+
+
+#### 以委托取代超类（399）
+
+如果超类的一些函数，对子类并不适用，那就说明不应该通过继承来获得超类的功能 -> 可以使用将超类的部分职能委托给另一个对象
+
+合理的继承关系的重要特征：子类的所有实例都是超类的实例，通过超类的接口来使用子类的实例应该完全不出问题
 
 
 
