--- a/_posts/重构2/2022-08-11-怎么在业务中写可维护性的代码.md
+++ b/_posts/重构2/2022-08-11-怎么在业务中写可维护性的代码.md
@@ -49,11 +49,11 @@ typora-root-url: ..
 
 ##### 时机1：修改功能/修改bug的时候
 
-平常看一个特别复杂的函数的时候，用注释写一下步骤1、2、3 -> 为什么？
+遇到一个特别复杂的函数的时候，用注释写一下步骤1、2、3 -> 为什么？
 
 - 因为即使是我自己写的代码，不用2个月，我一个月之后去改我已经不记得具体逻辑的。有时候看到还以为是别人写的，心里先骂一句“这么烂的代码谁写的”，vscode 点到代码行一看：“哦，是我，一个月前的傻缺”
 
-甚至看到变量名、函数名不准确时，应该毫不犹豫进行修改 -> 为什么
+甚至遇到变量名、函数名不准确时，应该毫不犹豫进行修改 -> 为什么
 
 - 变量命名是代码清晰的关键 -> 尝试理解代码如何工作
 - 技巧：如果需要写一句注释才能描述函数用途，就可以把注释变成函数的名字
@@ -70,23 +70,24 @@ typora-root-url: ..
 
 ##### 时机2：新增功能时
 
-新增一个功能的时候，如果原来的代码很不方便扩展，可以尝试重构一下，让代码每次加一个类型的处理逻辑，都非常方便，那么下一次再添加新功能的时候，我只要简单扩充一个新功能函数，而不用这里加一行，那里加一行。
+新增一个功能的时候，如果原来的代码很不方便扩展，可以尝试重构一下，让代码每次加一个类型的处理逻辑，那么下一次再添加新功能的时候，我只要简单扩充一个新功能函数，而不用这里加一行，那里加一行。
 
 程序的抽象能力来源于函数
 
 - 相似功能的代码写到一块去，如果老是需要跳来跳去才能明白在干啥，可以考虑放一块了
 - 消除重复代码 -> 这个动作并不会使系统运行更快，但是会使程序的修改动作容易很多（除了需要修改的地方少，也方便开发者理解代码，毕竟代码越多，理解成本越高，修改越困难）
 
-重构甚至是降低了一些困难项目的开发成本 -> 重构就是在代码写好后，改进它的设计
-
-- 尤其针对新接受的项目，随着对项目、需求理解的加深，可以进行重构（也就是增量式设计）
-- 一开始的时候，可以留一些口子为以后的拓展做准备，但远远没有必要为一些以后可能发生的事情，把现在的功能做得太复杂
-
-甚至在做需求的时候，我们也不用想要一次性将代码优化到最佳 -> 尤其是既想要代码结构好，又想要代码性能好，是非常容易给自己使绊子的一种行为
+在做需求的时候，我们也不用想要一次性将代码优化到最佳 -> 尤其是既想要代码结构好，又想要代码性能好，是非常容易给自己使绊子的一种行为
 
 - 在聪明的编译器、现代的缓存技术面前，我们很多**直觉都是不准确**的 -> 不要太害怕引入多个循环
 - 一般一个程序性能问题，都是集中在一小部分代码身上，而不是所有代码
 - 先构建良好结构的程序 -> 开发完毕后，在性能优化阶段，针对性能热点的一小段代码进行优化 -> 较少的工作量会达到比较好的成果
+
+一开始的时候，可以留一些口子为以后的拓展做准备，但远远没有必要为一些以后可能发生的事情，把现在的功能做得太复杂
+
+重构甚至是降低了一些困难项目的开发成本 -> 重构就是在代码写好后，改进它的设计
+
+- 随着对项目、需求理解的加深，可以进行重构（也就是增量式设计）
 
 ##### 技巧
 
@@ -99,11 +100,27 @@ typora-root-url: ..
 
 - 首先小步修改，每次修改，运行测试，通过后提交代码，保证随时可以轻松回滚到上一个可工作状态
 
+案例：性能优化
 
+首先看下结果：
 
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221013172326042.png" alt="image-20221013172326042" style="zoom:50%;" />
 
+步骤1：拆分步骤
 
-如果你也觉得可维护性的代码的确有用，投入产出比挺高的，可以深入了解下《重构2》，坤坤推荐给我的，现在我把这本书发扬光大一下，是一本案例用 js 写的，特别适合我们前端看的书。
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221013172437014.png" alt="image-20221013172437014" style="zoom:30%;" />
 
-不过书太厚了，不想看的可以访问我博客，核心常用到的核心理论我都在我博客里贴了我按照书里案例理解的步骤1-2-3，感兴趣可以翻一下，对书感兴趣的可以找我、找坤坤、找刘敏借书。
+步骤2：查看各个步骤耗时
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221013172520520.png" alt="image-20221013172520520" style="zoom:30%;" />
+
+步骤3：根据性能热点问题进行性能优化
+
+如果你也觉得可维护性的代码的确有用，投入产出比挺高的，可以深入了解下《重构2》，现在我把这本书发扬光大一下，是一本案例用 js 写的，特别适合我们前端看的书。
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221013172634310.png" alt="image-20221013172634310" style="zoom:30%;" />
+
+电子书下载地址：[重构](https://github.com/Tyh2001/awesome-books/blob/master/%E9%87%8D%E6%9E%84%E6%94%B9%E5%96%84%E6%97%A2%E6%9C%89%E4%BB%A3%E7%A0%81%E7%9A%84%E8%AE%BE%E8%AE%A1%20%E7%AC%AC2%E7%89%88.pdf)
+
+不过书太厚了，不想看的可以访问我博客，核心常用到的核心理论我都在我博客里贴了我按照书里案例理解的步骤1-2-3，感兴趣可以翻一下
 
