--- a/_posts/react17+ts4/2022-10-14-项目初始化和配置.md
+++ b/_posts/react17+ts4/2022-10-14-项目初始化和配置.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     react17+ts4 课程笔记
+title:     项目初始化和配置
 subtitle:  
 date:       2022-10-14
 author:     
@@ -13,9 +13,9 @@ typora-root-url: ..
 
 
 
-# react17+ts4 课程笔记
+# 项目初始化和配置
 
-# 第一课：项目初始化和配置
+# 第一课
 
 :information_desk_person:注意：npx 可以让你使用 npm 中的包功能，而不用手动全局安装这个包
 
@@ -53,3 +53,14 @@ tsconfig.ts -> baseUrl 可以指定项目中绝对路径
 [commit 规范](https://github.com/conventional-changelog/commitlint/tree/master/@commitlint/config-conventional)
 
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221017094633907.png" alt="image-20221017094633907" style="zoom:87%;" />
+
+### mock工具
+
+推荐 json-server（node 服务）
+
+### REST API
+
+一种业界常见的设计风格 
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221017205425185.png" alt="image-20221017205425185" style="zoom:30%;" />
+
