--- a/_posts/react17+ts4/2022-10-19-TS 基本知识梳理.md
+++ b/_posts/react17+ts4/2022-10-19-TS 基本知识梳理.md
@@ -17,7 +17,48 @@ typora-root-url: ..
 
 # 第四课
 
-TS 类型
+### 泛型
+
+有个热知识：ts 是一种鸭子类型的语言，面向接口编程，而不是面向对象编程 -> **其实 ts 并不关心变量是什么类型，只要满足接口的都可以**
+
+- 看下面的案例，最常用的 useState 的函数签名如下，<S> - 泛型占位符，字母是什么不重要，但是在后面使用的时候，表示入参是 S 类型，输出也是 S
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221020091529232.png" alt="image-20221020091529232" style="zoom:50%;" />
+
+- 箭头函数（写泛型的位置和传统函数有点差异，但是作用是一样的）
+
+```typescript
+const fun = <V>(num: number, value: V)  => {}
+```
+
+- 在 interface 中也可以使用 - <T = Element> 表示默认为 Element 类型
+
+```typescript
+interface FormEvent<T = Element> extends SyntheticEvent<T> {}
+```
+
+
+
+
+
+#### interface - 又称为接口
+
+利用下方 TS 类型介绍的类型，创建一个自己的类型
+
+```typescript
+interface animal {
+  cat: string;
+}
+const aQiu: animal = {cat: 'aQiu'};
+```
+
+
+
+.d.ts + js 文件 = ts 文件
+
+
+
+#### TS 类型
 
 1、number
 
@@ -37,8 +78,93 @@ let name: string = "Alice"
 
 3、array - 所有元素 **类型相同** 的值的集合
 
-:tada:注意：
+:tada:注意：在 js 中 ['Alice', 428] 是一个数组，在 TS 中不算数组，叫做 tuple
 
 ```typescript
+let list: Array<number> = [1, 2, 3];
+```
+
+4、boolean
+
+```typescript
+let isFalse: boolean = false;
+```
+
+5、函数
+
+两种声明方法：1⃣️ 在 js 函数上直接声明参数和返回值
+
+```typescript
+const isFalsy = (value: any) : boolean => {
+  return value === 0 ? true : !!value;
+} 
+```
+
+2⃣️ 声明想要的函数类型
+
+```typescript
+const isFalsy: (value: any) => boolean = (value) => {
+  return value === 0 ? true : !!value;
+} 
+```
+
+6、any
+
+不推荐使用
+
+7、void
+
+一般只使用在一个地方：表示函数不返回任何值或返回 undefined
+
+8、object
+
+除了 `number、string、boolean、bigint、symbol、null、undefined` 都是 object
+
+9、tuple
+
+另一种 array - "数量固定，类型可以各异"，在 js 中不区分，在 ts 中区分
+
+```typescript
+const [name, setName] = useState<string>('')
+```
+
+使用场景 - custom hook 的返回值 - 没经验，截图留念先
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221019212157924.png" alt="image-20221019212157924" style="zoom:40%;" />
+
+10、enum
+
+```typescript
+enum Color {
+  Yellow,
+  Green,
+  Blue,
+  Red
+}
+
+let c: Color = Color.Green;
+```
+
+11、undefined 和 null
+
+既是一个值，也是一个类型
+
+```typescript
+let u: undefined = undefined;
+let n: null = null;
+```
+
+12、unkown
+
+表示这个值可以是任何值 - 严格版本的 any -> 代码自己会有推理，可以及时抛出错误使用
+
+13、never
+
+函数抛错就是返回的 never 类型
+
+```typescript
+const fun = () => {
+  throw new Error()
+}
 ```
 
