--- a/_posts/react17+ts4/2022-10-19-TS 基本知识梳理.md
+++ b/_posts/react17+ts4/2022-10-19-TS 基本知识梳理.md
@@ -17,11 +17,13 @@ typora-root-url: ..
 
 # 第四课
 
-### 泛型
+### 泛型 
+
+通常使用在 函数、接口和类
 
 有个热知识：ts 是一种鸭子类型的语言，面向接口编程，而不是面向对象编程 -> **其实 ts 并不关心变量是什么类型，只要满足接口的都可以**
 
-- 看下面的案例，最常用的 useState 的函数签名如下，<S> - 泛型占位符，字母是什么不重要，但是在后面使用的时候，表示入参是 S 类型，输出也是 S
+- 看下面的案例，最常用的 useState 的函数签名如下，函数后面的 <S>  表示泛型占位符，字母是什么不重要，但是在后面使用的时候，表示入参是 S 类型，输出也是 S
 
 <img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221020091529232.png" alt="image-20221020091529232" style="zoom:50%;" />
 
