feat：项目经验补充

--- a/_posts/2023-07-14 - 怎么做好项目管理.md
+++ b/_posts/2023-07-14 - 怎么做好项目管理.md
@@ -25,7 +25,7 @@ typora-root-url: ..
 
 关键点1：功能 和 实现 是两回事，在写方案的时候，不能混着两边都考虑。先想清楚想要的功能，在确定功能之后，再考虑采用什么实现方案
 
-关键点2：
+关键点2：当实现方案成本很高（太过复杂）、需要兼容和修改的情况很多，可以考虑新的解决方案（想不出来，一定要记得求助同事！开口求助！头脑风暴可能会带来意外惊喜！大大简化方案！）
 
 #### 时间节点梳理（弱项）
 
