feat：浏览器相关内容的复习与优化调整

--- a/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
+++ b/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
@@ -29,7 +29,7 @@ Chrome打开一个页面需要启动多少进程？4个
 1. 进程中的**任意一线程执行出错，都会导致整个进程的崩溃**
 2. 线程之间共享进程中的数据
 
-  <img src="/../img/assets_2019/image-20210408215210816.png" alt="image-20210408215210816" style="zoom:25%;" />
+<img src="/../img/assets_2019/image-20210408215210816.png" alt="image-20210408215210816" style="zoom:25%;" />
 
 3. 当一个进程关闭之后，操作系统会**回收进程所占用的内存**
 
@@ -37,7 +37,7 @@ Chrome打开一个页面需要启动多少进程？4个
 
 
 #### 多进程浏览器
-当前浏览器是多进程浏览器：包括**1个浏览器主进程、1个 GPU 进程、1个网络进程、多个渲染进程和多个插件进程**（插件进程依据页面依赖而增加）
+当前浏览器是多进程浏览器：包括**1个浏览器（Browser）主进程、1个 GPU 进程、1个网络进程、多个渲染进程和多个插件进程**（插件进程依据页面依赖而增加）
 
 <img src="/../img/assets_2019/image-20210408215258029.png" alt="image-20210408215258029" style="zoom:30%;" />
 
