--- a/_posts/浏览器原理相关内容/2021-04-06-浏览器知识图谱.md
+++ b/_posts/浏览器原理相关内容/2021-04-06-浏览器知识图谱.md
@@ -38,7 +38,9 @@ typora-root-url: ..
 
 4、浏览器网络
 
-<img src="/../img/assets_2019/image-20210406225701525.png" alt="image-20210406225701525" style="zoom:50%;" />5、浏览器安全
+<img src="/../img/assets_2019/image-20210406225701525.png" alt="image-20210406225701525" style="zoom:40%;" />
+
+5、浏览器安全
 
 <img src="/../img/assets_2019/image-20210406225732548.png" alt="image-20210406225732548" style="zoom:38%;" />
 
