--- a/_posts/浏览器原理相关内容/2021-04-18-23 如何优化页面.md
+++ b/_posts/浏览器原理相关内容/2021-04-18-23 如何优化页面.md
@@ -88,15 +88,18 @@ typora-root-url: ..
         - 解决策略：**可以在修改 DOM 之前查询相关值**
         
     -	3、<span style="color:red">避免布局抖动</span>
-         -	指在一次 JS 执行过程中，多次执行强制布局和抖动操作（例如在一个 for 循环语句里面不断读取属性值，每次读取属性值之前都要进行计算样式和布局）
-                 <img src="/../img/assets_2019/image-20210418122610962.png" alt="image-20210418122610962" style="zoom:40%;" />
-         - 解决策略：**尽量不要在修改 DOM 结构时再去查询一些相关值**
          
-    -	4、<span style="color:red">合理利用 CSS 合成动画</span>
+         - 指在一次 JS 执行过程中，多次执行强制布局和抖动操作（例如在一个 for 循环语句里面不断读取属性值，**每次读取属性值之前都要进行计算样式和布局**）
          
-         合成动画是直接在 **合成线程** 上执行的，和主线程无关，可以多加利用
+             <img src="/../img/assets_2019/image-20210418122610962.png" alt="image-20210418122610962" style="zoom:40%;" />
          
-         如果能提前知道对某个元素 **执行动画操作**，那就最好将其标记为 `will-change`，这是告诉渲染引擎需要将该元素单独生成一个图层
-         
+         -	解决策略：**尽量不要在修改 DOM 结构时再去查询一些相关值**
+    
+    - 4、<span style="color:red">合理利用 CSS 合成动画</span>
+    
+        合成动画是直接在 **合成线程** 上执行的，和主线程无关，可以多加利用
+    
+        如果能提前知道对某个元素 **执行动画操作**，那就最好将其标记为 `will-change`，这是告诉渲染引擎需要将该元素单独生成一个图层
+    
     - 5、<span style="color:red">避免频繁的垃圾回收</span>
         JS 使用了自动垃圾回收机制：如果在一些函数中 **频繁创建临时对象**，那么垃圾回收器也会频繁地去执行垃圾回收策略 --> 当垃圾回收操作发生时，就会 **占用主线程**，从而影响到其他任务的执行，严重的话还会让用户产生掉帧、不流畅的感觉
