--- a/_posts/浏览器原理相关内容/2021-04-09-05-2 html+js+css是如何解析渲染的.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-2 html+js+css是如何解析渲染的.md
@@ -68,3 +68,12 @@ typora-root-url: ..
 
 3、首次渲染完成后，进入完整页面的生成阶段
 
+#### 优化点
+
+1、网络/服务器处理
+2、解析白屏时间优化
+
+- **内联 JS、内联 CSS**  来避免两种类型的文件下载，这样获取到 HTML 文件之后就可以直接开始渲染流程了
+- 还可以尽量 **减少文件大小**，比如通过 webpack 等工具移除一些不必要的注释，并压缩 JavaScript 文件
+- 还可以将一些不需要在解析 HTML 阶段使用的 JavaScript 标记上 **sync 或者 defer**
+- 对于大的 CSS 文件，可以通过媒体查询属性，将其拆分为多个不同用途的 CSS 文件，这样只有在特定的场景下才会加载特定的 CSS 文件
