--- a/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
@@ -63,11 +63,11 @@ typora-root-url: ..
 
     JavaScript 实现动画效果，DOM元素操作等。
 
-- 2、Style **样式计算** - `Schedule Style Recalculation` 、`Recalculate Style` 
+- 2、Style： **样式计算** - `Schedule Style Recalculation` 、`Recalculate Style` 
 
     确定每个 DOM 元素应该应用什么 CSS 规则
 
-- 3、Layout <span style="color:red">**回流/重排 reflow**</span>  - `Update Layer Tree` 
+- 3、Layout： <span style="color:red">**回流/重排 reflow**</span>  - `Update Layer Tree` 
 
     - **定义**：根据 `CSSOM` + `DOM` 计算每个 DOM 元素在最终屏幕上显示的大小和位置 -  即 <span style="color:red">**计算布局**</span> --> 整个渲染流水线（从 html 开始递归往下计算尺寸和位置开始）的每个阶段都要执行一遍；
 
@@ -93,19 +93,23 @@ typora-root-url: ..
 
         查询某些属性或调用某些计算方法：<u>`offsetTop`, `offsetLeft`, `offsetWidth`, `offsetHeight`；`scrollTop`/Left/Width/Height；`clientTop`/Left/Width/Height；`width`,`height`；调用了`getComputedStyle()`, 或者 IE的 `currentStyle()`</u> 等，原理是一样的，都为求一个“即时性”和“准确性”。
 
-- 4、Paint <span style="color:red">**重绘 rePaint**</span> - `Paint` 
+- 4、Paint： <span style="color:red">**重绘 rePaint**</span> - `Paint` 
 
     - **定义**：元素的外观发生改变，但没有改变布局 —> 依然需要计算绘制信息（样式）
     - **触发事件**：改变某个元素的 <span style="color:red">**背景色、文字颜色、边框颜色等等不影响它周围或内部布局的属性**</span> 时，屏幕的一部分要重画，但是元素的几何尺寸没有变
 
-- 5、Composite 渲染层合并：`Composite Layers` 
+- 5、Composite： 渲染层合并：`Composite Layers` 
 
     在每个层上完成绘制过程之后，浏览器会将所有层按照合理的顺序合并成一个图层，然后显示在屏幕上。
+
+
 
 关于 `display:none` 和 `visibility:hidden`：
 
 - `display：none` 指的是元素完全不陈列出来，**不占据空间**，涉及到了DOM结构，故产生 **回流+重绘**
 - `visibility：hidden` 指的是元素**不可见但存在**，保留空间，不影响结构，故只产生 **重绘**
+
+
 
 ##### 减少重排次数的几种方法：
 
