feat: 查找跨域内容，修正图片引用问题

--- a/_posts/工作经验沉淀：全栈工作记录 - 技术/2022-08-25- Chrome 读取的缓存跨域问题.md
+++ b/_posts/工作经验沉淀：全栈工作记录 - 技术/2022-08-25- Chrome 读取的缓存跨域问题.md
@@ -23,13 +23,13 @@ typora-root-url: ..
 
 再访问 B 域名下的网站，同时也请求了 `react.production.min.js` 资源，但是当前这两个文件由于是微前端调用，使用的是 fetch 请求，而不是 script 标签直接请求，响应头里的 `access-control-allow-origin` 字段还是 A 域名，导致 B 域名下的这个资源 CORS err 了
 
-<img src="/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825144335803.png" alt="image-20220825144335803" style="zoom:80%;" />
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825144335803.png" alt="image-20220825144335803" style="zoom:80%;" />
 
 #### 解决方案：
 
 1、暴力解法就是直接禁用缓存，每次资源都是重新向服务器请求
 
-![image-20220825144926453](/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825144926.png)
+![image-20220825144926453](/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825144926.png)
 
 2、将 `Access-Control-Allow-Origin` 设置为 * ，这样 B 域名访问的时候，不会受跨域限制
 
@@ -37,6 +37,6 @@ typora-root-url: ..
 
 - 如果一个请求是跨源的，浏览器始终会向其添加 `Origin` header
 
-<img src="/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825150418106.png" alt="image-20220825150418106" style="zoom:80%;" />
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825150418106.png" alt="image-20220825150418106" style="zoom:80%;" />
 
-<img src="/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825145731931.png" alt="image-20220825145731931" style="zoom:80%;" />
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220825145731931.png" alt="image-20220825145731931" style="zoom:80%;" />
