--- a/_posts/面试题整理/2019-07-08-面试题整理 .md
+++ b/_posts/面试题整理/2019-07-08-面试题整理 .md
@@ -773,7 +773,7 @@ export default {
 
 ​	使用的row行必须包裹在`container`和`container-fluid`下，外部容器一个是`container`，一个是`container-fluid`，第一个**`container`是固定宽度，居中在网页中间**，第二个**`container-fluid`是百分比宽度，宽度为100%**，根据情况我们可以选择不同的容器。
 
-![](/img/assets_2019/container.png)
+![](/../img/assets_2019/container.png)
 
 **工作原理**：
 
