feat: 继续复习 HTTP 相关知识

--- a/_posts/HTTP相关/2021-04-21-09 一个完整的URL.md
+++ b/_posts/HTTP相关/2021-04-21-09 一个完整的URL.md
@@ -74,7 +74,7 @@ URL --- 统一资源定位符
 
 -   `query` - 对资源附加的额外要求
 用一个 `?` 开始，但不包含 `?`，表示对资源附加的额外要求
-格式：多个 `key=value` 的字符串，用字符 `&` 连接
+格式：多个 `key=value` 的字符串，这些 KV 值用字符 `&` 连接
 
 ## URI 的完整格式
 真正完整的格式如下，可以注意到多出两部分：
