review: 复习之前刷过的链表题

--- a/_posts/算法、刷题/2021-06-03-[206 链表].反转一个单链表.md
+++ b/_posts/算法、刷题/2021-06-03-[206 链表].反转一个单链表.md
@@ -48,7 +48,7 @@ typora-root-url: ..
         arr.unshift(pNode.val);
         pNode = pNode.next
     };
-    // 存储第一个节点，作为结果的 head
+    // 重新赋值第一个节点，作为结果的 head
     let first = head;
     for(let i=0; i<arr.length; i++) {
         head.val = arr[i];
@@ -73,14 +73,14 @@ var reverseList = function (head) {
     let prev = null;
     let current = head;
     while (current != null) {
-      // 在更改引用之前，还需要另一个指针来存储下一个节点
+      // 在更改引用之前，还需要另一个指针来存储原始的下一个节点
       let next = current.next;
-      // 当前节点的 next 指针改为指向前一个元素
+      // 当前节点的 next 指针改为指向前一个元素（实现反向）
       current.next = prev;
-      // 由于节点没有引用其上一个节点，事先存储其前一个元素
+      // （存的就是当前反向后的正确的节点）由于节点没有引用其上一个节点，事先存储其前一个元素
       prev = current;
       
-      // 往后走到下一个节点
+      // 往后走到原始的下一个节点
       current = next;
     }
   	// 此时，由于 current 已经因为 while 循环走到了下一个 null 节点，所以返回 prev
