--- a/_posts/算法、刷题/2021-06-03-[19 链表].删除链表的倒数第 n个节点.md
+++ b/_posts/算法、刷题/2021-06-03-[19 链表].删除链表的倒数第 n个节点.md
@@ -29,24 +29,29 @@ typora-root-url: ..
   }
 
 var removeNthFromEnd = function (head, n) {
+    // 在当前指针前面加一项
     var fake = new ListNode(0);
     fake.next = head;
+  
     var length = 0;
     var current = head;
-    //得到长度
+    // 得到长度 - 从 head 开始遍历原链表
     while (current != null) {
       length++;
       current = current.next;
     }
-    // length-n后正好时要删除的那个            
-    length -= n;
+  
+    // length-n 后正好是要删除的那个            
+    length = length - n;
     var current = fake;
-    // length-n后正好时要删除的那个的前一个           
+    // length-n-1 后正好是要删除的那个的前一个           
     while (length > 0) {
       length--;
       current = current.next
     }
+    // 链表中的删除，只要把前一个指针，跳过当前项，指向下一个即可
     current.next = current.next.next;
+  
     return fake.next
 };
 ```
