feat: 2. 两数相加 链表刷题

--- a/_posts/算法、刷题/2021-06-03-[21 链表].合并两个排序的链表.md
+++ b/_posts/算法、刷题/2021-06-03-[21 链表].合并两个排序的链表.md
@@ -77,11 +77,13 @@ typora-root-url: ..
 
 ```javascript
 var mergeTwoLists = function (l1, l2) {
+    // 判断当前是不是在链表的尾部 - 退出递归条件
     if (l1 == null) {
       return l2;
     } else if (l2 == null) {
       return l1;
     } else if (l1.val < l2.val) {
+      // 将当前较小值抛出，next 继续往后递归
       l1.next = mergeTwoLists(l1.next, l2);
       return l1;
     } else {
