feat: 3. 无重复字符的最长子串 解法2

--- a/_posts/算法、刷题/2023-08-23-[3]无重复字符的最长子串.md
+++ b/_posts/算法、刷题/2023-08-23-[3]无重复字符的最长子串.md
@@ -70,5 +70,38 @@ var lengthOfLongestSubstring = function(s) {
 };
 ```
 
-// todo 还可以不记录所有的 strs ，只记录最大的长度，在每次重复时对比最大长度 - 明天早上来优化下
+解法二：（自己写的）
+
+时间：72ms 内存：45.06M
+
+```js
+var lengthOfLongestSubstring = function(s) {
+    // 存储的最新字符串
+    let strs = '';
+    // 存储已有字符串最大值
+    let maxLength = 0;
+    for(let item of s) {
+        // 和最新字符串重复的 位置
+        const dupIndex = strs.indexOf(item);
+        if(dupIndex > -1) {
+            // 重复
+            if(strs.length > maxLength) {
+                maxLength = strs.length;
+            }
+            // 存储新的字符串
+            strs = `${strs.slice(dupIndex+1)}${item}`
+        } else {
+            // 没重复 - 最新字符串
+            strs = `${strs}${item}`
+        }
+    }
+    // 最新的字符串长度
+    if(strs.length > maxLength) {
+        maxLength = strs.length;
+    }
+    return maxLength
+};
+```
+
+
 
