--- a/_posts/算法、刷题/2023-08-24-[15] 三数之和.md
+++ b/_posts/算法、刷题/2023-08-24-[15] 三数之和.md
@@ -13,9 +13,7 @@ typora-root-url: ..
 
 ## 15. 三数之和
 
-#### 力扣 15. 给你一个整数数组 `nums` ，判断是否存在三元组 `[nums[i], nums[j], nums[k]]` 满足 `i != j`、`i != k` 且 `j != k` ，同时还满足 `nums[i] + nums[j] + nums[k] == 0` 。请
-
-你返回所有和为 `0` 且不重复的三元组。
+#### 力扣 15. 给你一个整数数组 `nums` ，判断是否存在三元组 `[nums[i], nums[j], nums[k]]` 满足 `i != j`、`i != k` 且 `j != k` ，同时还满足 `nums[i] + nums[j] + nums[k] == 0` 。请你返回所有和为 `0` 且不重复的三元组。
 
 **注意：**答案中不可以包含重复的三元组。
 
@@ -48,11 +46,12 @@ nums[0] + nums[3] + nums[4] = (-1) + 2 + (-1) = 0 。
 解释：唯一可能的三元组和为 0 
 ```
 
-- 这题自己没有想出来，有很多边界情况考虑不到，所以题解看了好多遍，有几个核心点注意
-  - 提前排序，可以处理重复解的问题
-  - 遍历时，当前值大于 0 ，右侧双指针的情况下，求和肯定大于0  -> 可以提前中止循环
-  - 导致重复的几个条件主要是遍历的当前值、指针的下一项，判断处理掉就可以避免重复解
-  - while 里面嵌 两个 while 感觉空间损耗很大，但是又有点妙，能解决问题都是好方法
+这题自己没有想出来，有很多边界情况考虑不到，所以题解看了好多遍，有几个核心点注意
+
+- 提前排序，可以处理重复解的问题
+- 遍历时，当前值大于 0 ，右侧双指针的情况下，求和肯定大于0  -> 可以提前中止循环
+- 导致重复的几个条件主要是遍历的当前值、指针的下一项，判断处理掉就可以避免重复解
+- while 里面嵌 两个 while 感觉空间损耗很大，但是又有点妙，能解决问题都是好方法
 
 时间：172ms 内存：53.71M
 
