feat: 算法题 困难 合并 k 个升序链表

--- a/_posts/HTTP相关/2019-07-03-《图解HTTP协议-修改》.md
+++ b/_posts/HTTP相关/2019-07-03-《图解HTTP协议-修改》.md
@@ -69,7 +69,7 @@ TCP/IP通信传输流：客户端到服务器通过分层顺序传输
 
 ### TCP的**三次握手**（是为了准确无误得将数据送达目标处，把包送出去后，向对方确认是否送达成功）
 
-- 1.发送端受限发送一个带SYN标志的数据包给对方。
+- 1.发送端发送一个带SYN标志的数据包给对方。
 - 2.接收端收到后，回传一个带有SYN/ACK标志的数据包传达确认信息。
 - 3.最后，发送端再回传一个带ACK标志的数据包，代表握手结束。
 
