--- a/_posts/算法、刷题/2021-07-07-数组扁平化（拍平数组）.md
+++ b/_posts/算法、刷题/2021-07-07-数组扁平化（拍平数组）.md
@@ -58,7 +58,7 @@ typora-root-url: ..
 
 - 方法二：
 
-    自己实现的核心思路
+    自己实现的核心思路：在数组中找到是数组类型的元素，然后将他们展开
 
     - **第一个要解决的就是遍历数组的每一个元素；**
 
@@ -89,7 +89,7 @@ typora-root-url: ..
         Array.isArray(arr);// true
         ```
 
-    - 第三个要解决的就是将数组的元素 **展开**
+    - **第三个要解决的就是将数组的元素 展开**
 
         - **展开一层**
 
