modify: 部分内容修正

--- a/_posts/JS原生基础相关/2021-07-08-JS数据类型判断方法整理.md
+++ b/_posts/JS原生基础相关/2021-07-08-JS数据类型判断方法整理.md
@@ -16,7 +16,7 @@ typora-root-url: ..
 #### 1/2、js的基本数据类型及其判断方法
 
 - **值类型(6个基本类型)**：字符串（String）、数字(Number)、布尔(Boolean)、空（Null）、未定义（Undefined）、Symbol（ES6引入，表示独一无二的值）。
-- **引用数据类型**（又称Object类型）：对象(Object)、数组(Array)、函数(Function)、Date 类型、RegExp 类型（正则）。
+- **引用数据类型**（又称Object类型）：对 象(Object)、数组(Array)、函数(Function)、Date 类型、RegExp 类型（正则）。
 
 注意：基本数据类型值不可变，基本类型的比较是**值的比较**；引用类型值可变，引用类型的比较是**引用的比较**；
 
@@ -42,7 +42,9 @@ a = null;typeof a;    // object， --> 注意 null判断类型为 object
 a = function(){};typeof a;    // function， --> 注意 函数判断为 function 而不是 object
 ```
 
-②instanceof：判断一个引用类型的变量具体是不是某种类型的对象
+②instanceof：判断一个引用类型的变量具体是不是某种类型的对象（不适用于原始类型的值）
+
+MDN：instanceof 运算符用来检测 constructor.prototype 是否存在于参数 object 的原型链上 -> 翻译一下：就是检测构造函数的 prototype 是否出现在某个实例对象的原型链上
 
 - **注意点**
 
@@ -65,7 +67,8 @@ a = function(){};typeof a;    // function， --> 注意 函数判断为 function
 
 ```javascript
 const s = [];
-typeof(s); // object
+typeof(s); // 'object'
+typeof []; // 'object'
 ```
 
 **②instanceof运算符**：**查找原型链判断** - 判断某个构造函数的 `prototype` 属性所指向的對象是否存在于另外一个要检测对象的原型链上。如果这个 `Object` 的 **原型链上能够找到 Array 构造函数** 的话，那么这个 `Object` 应该就是一个数组，如果这个 `Object` 的原型链上只能找到 `Object` 构造函数的话，那么它就不是一个数组。
@@ -109,6 +112,8 @@ Object.prototype.toString.call(c);//"[object String]"
 
 **⑤isArray方法**：最靠谱的判断数组的方法
 
+MDN：它不检查值的原型链，也不依赖于它所附加的 `Array` 构造函数。对于使用数组字面量语法或 `Array` 构造函数创建的任何值，它都会返回 `true`。
+
 ```javascript
 const a = [];
 Array.isArray(a);//true
@@ -117,4 +122,6 @@ Array.isArray(b);//false
 ```
 
 经过验证，即使重写了`Object.prototype.toString`方法、修改了`constructor`对象是不影响判断的结果的。
+
+`Array.isarray()` 也拒绝原型链中带有 `Array.prototype`，而实际不是数组的对象，但 `instanceof Array` 会接受。
 
