--- a/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
+++ b/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
@@ -127,7 +127,7 @@ for(var i= 1; i < arr.length; i++){
 // 实现
 var arr = [89, 56, 100, 21, 87, 45, 1, 88];
 for(var i= 1;i<arr.length;i++){
-  	// 优化：小于i的位置都已经排好序了，跳过当前 i 的循环
+  	// 优化：在 i 第一次比较不需要交换时，不需要再执行当前内层循环
   	if(arr[i-1] < arr[i]) {
       	continue;
     }
