review：红宝书复习

--- a/_posts/《红宝书相关博客》/2019-06-06-第五章 引用类型 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-06-第五章 引用类型 小结.md
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-​    对象在`JavaScript`中被成为引用类型的值，而且有一些内置的引用类型可以用来创建特定的对象，
+​    对象在`JavaScript`中被称为引用类型的值，而且有一些内置的引用类型可以用来创建特定的对象，
 
 ### 现简要总结如下：
 
@@ -31,4 +31,4 @@ typora-root-url: ..
 2. 在读取模式下访问基本类型时，就会创建对应的基本包装类型的一个对象，从而方便了解数据操作；
 3. 操作基本类型值的语句一经执行完毕，就会立即销毁新创建的包装对象。
 
-​    在所有代码执行之前，作用域中就一经存在**两个内置对象**：`Global`和`Math`。在大多数`ECMAScript`实现中都不能直接访问`Global`对象；不过，WEB浏览器实现了承担该角色的`window`对象。全局变量和函数都是`Global`对象的属性。`Math`对象提供了很多属性和方法，用于辅助完成复杂的数学计算任务。
+​    在所有代码执行之前，作用域中就已经存在**两个内置对象**：`Global`和`Math`。在大多数`ECMAScript`实现中都不能直接访问`Global`对象；不过，WEB浏览器实现了承担该角色的`window`对象。全局变量和函数都是`Global`对象的属性。`Math`对象提供了很多属性和方法，用于辅助完成复杂的数学计算任务。
