--- a/_posts/《红宝书相关博客》/2019-06-08-第七章 函数表达式 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-08-第七章 函数表达式 小结.md
@@ -13,27 +13,27 @@ typora-root-url: ..
 
 
 
-​    在`JavaScript`编程中，函数表达式是一种非常有用的技术。使用函数表达式可以无须对函数命名，从而实现动态编程。
+​    在`JavaScript`编程中，函数表达式是一种非常有用的技术。**使用函数表达式可以无须对函数命名，从而实现动态编程**。
 
 ​    匿名函数，也成为 **拉姆达函数**，是一种使用`JavaScript`函数的强大方式。
 
 ### 以下总结了函数表达式的特点：
 
 1. 函数表达式不同于函数声明。声明函数要求有名字，但是函数表达式不需要。没有名字的函数表达式也叫做匿名函数。
-
 2. 在无法确定如何引用函数的情况下，递归函数就会变得比较复杂；
+3. 递归函数应用中 **使用`arguments.callee`来递归地调用自身** ，所以不要使用函数名--函数名可能会发生变化。
 
-3. 递归函数应该式中 **使用`arguments.callee`来递归地调用自身** ，不要使用函数名--函数名可能会发生变化。
-    
-    当在函数内部定义了其他函数时，就创建了**闭包**。闭包有权访问包含外部函数内部的所有变量，原理如下：
+### 闭包
 
-  - 在后台执行环境中，**闭包的作用域链**包含着它自己的作用域、包含函数的作用域和全局作用域。
+当在函数内部定义了其他函数时，就创建了**闭包**。
 
-  - 通常，函数的作用域及其所有变量都会在函数执行结束后被销毁。
+特点：闭包有权访问包含外部函数内部的所有变量。
 
-  - 但是，当函数返回了一个闭包时，这个函数的作用域将会**一直在内存中保存到闭包不存在为止**。
+原理：在后台执行环境中，**闭包的作用域链**包含着它自己的作用域、包含函数的作用域和全局作用域。通常，函数的作用域及其所有变量都会在函数执行结束后被销毁。但是，当函数返回了一个闭包时，这个函数的作用域将会**一直在内存中保存到闭包不存在为止**。
 
-### 模仿块级作用域
+闭包的一些作用：
+
+#### 1、模仿块级作用域
 
 ​    使用闭包可以在`JavaScript`中**模仿块级作用域**（`JavaScript`本身没有块级作用域的概念），要点如下：
 
@@ -41,9 +41,9 @@ typora-root-url: ..
 
 - 结果就是函数内部的所有变量都会被立即销毁----除非将某些变量赋值给了包含作用域（即外部作用域）中的变量。
 
-### 特权方法
+#### 2、特权方法
 
-​    闭包还可以用于在对象中创建私有变量，相关概念和要点如下：
+​    闭包还可以用于**在对象中创建私有变量**，相关概念和要点如下：
 
 1. 即使`JavaScript`中没有正式的私有对象属性的概念，但可以使用闭包来实现公有方法，而通过公有方法可以**访问在包含作用域中定义的变量**。
 2. 有权访问私有变量的公有方法叫做**特权方法**。
