--- a/_posts/工程化/2020-03-17-面试 AMD和CMD区别.md
+++ b/_posts/工程化/2020-03-17-面试 AMD和CMD区别.md
@@ -26,7 +26,7 @@ typora-root-url: ..
 
 3、`CMD/SeaJS` 规范与AMD规范很相似，都用于浏览器编程，**<span style="color:red">依赖就近</span>**，代码更简单。
 
-4、`ES6` 在语言标准的层面上，实现了模块功能，而且实现得相当简单，完全可以取代 CommonJS 和 AMD 规范，成为浏览器和服务器 **通用的模块解决方案**。
+4、`ES6` 在语言标准的层面上，实现了模块功能，而且实现得相当简单，完全可以取代 CommonJS 和 AMD 规范，成为浏览器和服务器 **通用的模块解决方案** - 异步，输出的是值的引用，编译时输出（静态解析时生成）
 
 ****
 
@@ -62,7 +62,7 @@ typora-root-url: ..
 |          | `require` 需要代码同步执行 - 不适合浏览器端                  | 异步                                                         |
 | 输出     | 输出的是一个值的**拷贝**<br />（一旦输出一个值，模块内部的变化就影响不到这个值） | 输出的是**值的引用**<br />（动态引用，脚本执行时，再根据引用，到模块里面取值，若原始值变了，`import` 加载的值也会跟着变） |
 | 时机     | **运行时加载**，加载的是 **整个模块 - 所有接口**，只有在 <u>脚本运行</u> 完才会生成 | **编译时输出** 接口，**可以单独加载某个接口**，在代码 <u>静态解析</u> 阶段就会生成 |
-| 加载原理 | 一个模块就是一个脚本，`require` 命令第一次加载该脚本，就会执行整个脚本，然后在内存生成一个对象<br>以后需要用到这个模块的时候，就会到 `exports` 属性上面取值。也就是说，**不会再次执行该模块，而是到 <span style="color:red">缓存</span> 之中取值，只会在第一次加载时运行一次** |                                                              |
+| 加载原理 | 一个模块就是一个脚本，`require` 命令第一次加载该脚本，就会执行整个脚本，然后在内存生成一个对象<br>以后需要用到这个模块的时候，就会到 `exports` 属性上面取值。也就是说，**不会再次执行该模块，而是到 <span style="color:red">缓存</span> 之中取值，只会在第一次加载时运行一次** | 静态化                                                       |
 
 ### 四、4个模块化规范的详解
 
@@ -95,7 +95,7 @@ AMD - `Asynchronous Module Definition`，异步模块定义
 
 - 定义
 
-    采用 **<span style="color:red">异步</span>** 方式加载模块，模块的加载不影响它后面语句的运行。所有依赖这个模块的语句，都定义在一个 **回调函数** 中，等到所有依赖加载完成之后（**<span style="color:red">依赖前置</span>**），这个回调函数才会运行。
+    采用 **<span style="color:red">异步</span>** 方式加载模块，模块的加载不影响它后面语句的运行。所有依赖这个模块的语句，都定义在一个 **回调函数** 中，等到所有依赖加载完成之后（**<span style="color:red">依赖前置</span>**），这个回调函数才会运行（书写顺序和执行顺序不一定一致）。
 
 - 工具
 
@@ -126,7 +126,7 @@ AMD - `Asynchronous Module Definition`，异步模块定义
 
 #### 3/4、CMD/SeaJS
 
-CMD - 规范专门用于浏览器端，阿里借鉴整合了  `Commonjs`  的规范与 `AMD` 规范并进行了改进，模块的加载是异步的，**模块使用时才会加载执行**。
+CMD - 规范专门用于浏览器端，阿里借鉴整合了  `Commonjs`  的规范与 `AMD` 规范并进行了改进，模块的加载是异步的，**模块使用时才会加载执行**。（**<span style="color:red">依赖就近</span>**）
 
 - 模块输出
 
