--- a/_posts/工程化/2021-07-20-babel深入.md
+++ b/_posts/工程化/2021-07-20-babel深入.md
@@ -22,7 +22,7 @@ typora-root-url: ..
 
     - **解析**
 
-        通过 `babyIon`（7.x改名为@babel/parser）实现：先 **词法分析** 把字符串形式的代码解析为 **令牌 tokens 流** （类似 AST 中节点），再 **语法分析** 把令牌流转换成 AST
+        通过 `babyIon`（7.x改名为@babel/parser）实现：先 **词法分析** 把字符串形式的代码解析为 **令牌tokens 流** （类似 AST 中节点），再 **语法分析** 把令牌流转换成 AST
 
     - **转换**
 
@@ -31,6 +31,8 @@ typora-root-url: ..
     - **生成**
 
         将 AST 通过 `babel-generator` 进行深度优先遍历，构建字符串，转换成 js 代码
+        
+        <img src="/../img/assets_2019/bVbDNYp.png" alt="1.jpg" style="zoom:60%;" />
 
 - babel 本身不具有任何转化功能 - 功能全部集成在 `plugin`
     - **语法插件** - 在【解析】阶段解析更多语法
