--- a/_posts/浏览器原理相关内容/2021-04-08-04 导航流程：从输入url到打开页面发生了什么.md
+++ b/_posts/浏览器原理相关内容/2021-04-08-04 导航流程：从输入url到打开页面发生了什么.md
@@ -112,5 +112,5 @@ https://www.geekbang.org:8080
 
     如果一次访问是从一个渲染进程中发起的，例如用户点击一个链接或者运行 JavaScript 代码`location = 'http://newsite.com'`时，渲染进程首先检查`beforeunload`。
 
-    然后再执行和浏览器进程初始化访问同样的步骤，只不过区别在于这样的访问请求是 **由渲染进程向浏览器进程**发起的。
+    然后再执行和浏览器进程初始化访问同样的步骤，只不过区别在于这样的访问请求是 **由渲染进程向浏览器进程**发起的
 
