--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -84,7 +84,7 @@ typora-root-url: ..
 
         —>  其次**会处理函数声明** ：在变量对象中以函数名建立一个属性，属性值为指向该函数所在内存地址的引用
 
-        —> 再会 **处理变量声明**，变量对象中以变量名建立一个属性，属性值为 `undefined`，如果变量与函数同名，则 <u>在这个阶段</u>，以函数值为准，如下例子：
+        —> 再会 **处理变量声明**，变量对象中以变量名建立一个属性，属性值为 `undefined`，如果变量与函数同名，则 在这个阶段，<u>以函数值为准</u>，如下例子：
 
         ![image-20210706175225514](/../img/assets_2019/image-20210706175225514.png)
 
