--- a/_posts/浏览器原理相关内容/2021-04-10-08 块级作用域.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-08 块级作用域.md
@@ -37,12 +37,12 @@ function foo(){
       let b = 3
       var c = 4
       let d = 5
-      console.log(a)
-      console.log(b)
+      console.log(a) // 1
+      console.log(b) // 3
     }
-    console.log(b) 
-    console.log(c)
-    console.log(d)
+    console.log(b) // 2
+    console.log(c) // undefined -> 4，这个要尤其注意，var在变量环境中预编译时已存在 
+    console.log(d) // error
 }   
 foo();
 ```
