--- a/_posts/浏览器原理相关内容/2021-04-11-09 作用域链.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-09 作用域链.md
@@ -14,6 +14,8 @@ typora-root-url: ..
 
 # 09 作用域链
 
+结论：作用域链（outer指向的上一个上下文）由函数声明的位置决定。下面是帮助理解的例子：
+
 先开看一段代码：输出的结果应该是什么？ -- bye，坑
 
 原因：JavaScript **作用域链是由词法作用域决定**的，**词法作用域就是根据代码的位置来决定**的，详见下文分析
