--- a/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
@@ -38,6 +38,8 @@ typora-root-url: ..
 
 `call`是立即执行传递this的；`bind`不是立即执行的，返回的是函数的副本；
 
+bind 的定义：bind 会创建一个新函数，当调用该函数时，bind 会调用原函数，并将其 this 关键词设置为给定的值
+
 ```javascript
 let bar = {
   myName : " 极客邦 ",
@@ -48,7 +50,7 @@ function foo(name, age){
 }
 foo.call(bar, "name", "18");
 foo.apply(bar, ["name", "17"]);
-foo.bind(bar)("name", "16");
+foo.bind(bar)("name", "16"); // 新函数，立即执行 
 ```
 
  #### 2、通过对象调用方法 - 指向对象本身
@@ -83,15 +85,15 @@ var myObj = new CreateObj()
 
 我们复习一下，JS引擎在`new`一个构造函数的时候，做了四件事：
 -   首先**创建了一个新对象** `tempObj`；
--   接着将构造函数的**作用域赋给新对象** —> <span style="color:red">调用 `CreateObj.call` 方法</span>，并将 `tempObj` 作为 call 方法的参数，这样当 `CreateObj` 的执行上下文创建时，它的 this 就指向了 `tempObj` 对象
--   然后执行构造函数中的代码（**为这个新函数添加属性**） —> 执行 `CreateObj` 函数，此时的 `CreateObj` 函数执行上下文中的 this 指向了 `tempObj` 对象；
+-   接着将空对象的 `__proto__` 指向构造函数的原型
+-   然后改变this指向，执行构造函数中的代码（**为这个新函数添加属性**） —> <span style="color:red">调用 `CreateObj.call` 方法</span>；立即执行 `CreateObj` 函数，此时的 `CreateObj` 函数执行上下文中的 this 指向了 `tempObj` 对象；
 -   最后**返回**新对象： `tempObj` 对象
 
 用代码来表示就是：
 ```js
 var tempObj = new Object();
-tempObj.__proto__ = CreateObj.prototype;//设置原型链
-CreateObj.call(tempObj); // 改变 this 指向并执行
+tempObj.__proto__ = CreateObj.prototype; // 设置原型链
+CreateObj.call(tempObj); // 改变 this 指向并立即执行
 return tempObj;
 ```
 
@@ -99,11 +101,11 @@ return tempObj;
 
 ```js
 function objectFactory() {
-    var obj = new Object(),
+    var obj = new Object()；// 创建一个新的空对象
     Constructor = [].shift.call(arguments);
-    obj.__proto__ = Constructor.prototype;
-    var ret = Constructor.apply(obj, arguments);
-    return typeof ret === 'object' ? ret : obj;
+    obj.__proto__ = Constructor.prototype; // 将这个空对象的__proto__指向构造函数的原型
+    var ret = Constructor.apply(obj, arguments); // 将this指向空对象
+    return typeof ret === 'object' ? ret : obj; // 根据构造函数是否有返回值，给出返回对象
 };
 ```
 
