--- a/_posts/浏览器原理相关内容/2021-04-11-13-2 JS如何影响DOM树的构建.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-13-2 JS如何影响DOM树的构建.md
@@ -18,7 +18,7 @@ typora-root-url: ..
 渲染引擎无法直接识别网络进程传递的 HTML 字节流，而 DOM 就是能理解的结构
 
 - DOM的作用：
-    
+  
     1、页面 -- DOM是生成页面的 **基础数据结构**
     
     2、JS脚本 -- DOM提供了 **JS脚本操作的接口**，JS可以修改 DOM 结构、样式、内容
@@ -52,7 +52,7 @@ typora-root-url: ..
 
 ### JS在生成DOM树期间的影响
 
-总结：所以渲染引擎在 <span style="color:red">**遇到 JavaScript 脚本**</span> 时，不管该脚本是否操纵了 CSSOM，都会<span style="color:red">**先执行 CSS 文件下载，解析操作，再执行 JavaScript 脚本**</span>。
+ -总结：所以渲染引擎在 <span style="color:red">**遇到 JavaScript 脚本**</span> 时，不管该脚本是否操纵了 CSSOM，都会<span style="color:red">**先执行 CSS 文件下载，解析操作，再执行 JavaScript 脚本**</span>。
 
 #### 1/3、HTML字节流中内嵌`<script>`标签
 ```html
@@ -68,7 +68,7 @@ typora-root-url: ..
 </html>
 ```
 - 和正常仅HTML字节流区别：
-    
+  
     解析到 `script` 标签时，渲染引擎判断这是一段脚本，此时 HTML 解析器就会 <span style="color:red">**暂停 DOM 的解析**</span>，因为接下来的JS可能要修改当前已经生成的 DOM 结构
 
 <img src="/../img/assets_2019/image-20210414213620767.png" alt="image-20210414213620767" style="zoom:20%;" />
