--- a/_posts/react17+ts4/2023-11-05-React设计原理 Part 1 理念篇.md
+++ b/_posts/react17+ts4/2023-11-05-React设计原理 Part 1 理念篇.md
@@ -1,7 +1,7 @@
 ---
 
 layout:     post
-title:     React 设计原理
+title:     React 设计原理 Part 1 理念篇
 subtitle:  
 date:       2023-11-13
 author:     
@@ -14,15 +14,13 @@ typora-root-url: ..
 
 
 
-# React 设计原理
+# React 设计原理 Part 1 理念篇
 
 本文主要是对《React 设计原理》一书的笔记和总结，方便之后回顾只看笔记，不再重新细读书籍。
 
 目录
 
-> Part 1 理念篇
->
-> ​	前端框架原理
+> 前端框架原理
 
 1.1、当前主流的两种描述 UI 的方案
 
@@ -38,9 +36,7 @@ typora-root-url: ..
 
 1.7、前端框架的实现原理（总结 table）
 
-> Part 1 理念篇
->
-> ​	React概念
+> React概念
 
 2.1、React 重运行时，是如何实现快速响应的？
 
@@ -58,7 +54,7 @@ typora-root-url: ..
 
 
 
-## Part 1 理念篇 -- 前端框架原理
+## 前端框架原理
 
 本章主要从宏观层面叙述了为什么前端划分了多种不同框架，以及各框架之间是怎么实现渲染更新的。
 
@@ -174,7 +170,7 @@ React：React 使用 JSX 描述 UI，<span style="color:red">JSX 编译为 creat
 
 
 
-## Part 1 理念篇 -- React概念
+## React概念
 
 带着问题来阅读，本章疑问：<span style="color:red">1、为什么React16要使用fiber重构？有什么优点？</span>
 
