--- a/_posts/JS原生基础相关/2021-07-29-原型(链).md
+++ b/_posts/JS原生基础相关/2021-07-29-原型(链).md
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-## 原型(链)
+## 🪷原型(链)
 
 #### 2. 继承prototype大概是怎么实现的？
 
@@ -148,7 +148,7 @@ class ColorPoint extends Point {}//ColorPoint继承了Point类所有的属性和
 
 **区别：**
 
-ES5 的继承，实质是**先创造子类的实例对象`this`**，然后再将父类的方法**添加到`this`上面**（`Parent.apply(this)`）。
+ES5 的继承，实质是**先创造子类的实例对象`this`**，然后再将父类的方法**添加到`this`上面**（`Parent.call(this, params)`）。
 
 ES6 的继承机制完全不同，实质是**先将父类实例对象的属性和方法，加到`this`上面**（所以必须先调用`super`方法），然后再用子类的构造函数**修改`this`。**
 
