--- a/_posts/《红宝书相关博客》/2019-06-07-第六章 面向对象的程序设计 小结 .md
+++ b/_posts/《红宝书相关博客》/2019-06-07-第六章 面向对象的程序设计 小结 .md
@@ -19,7 +19,7 @@ typora-root-url: ..
 
 ### 在没有类的情况下，可以采用下列模式创建对象：
 
-1. 工厂模式：使用简单的函数创建对象，为对象添加属性和方法，然后返回对象。这个模式后来被构造函数模式所取代。
+1. 工厂模式：使用简单的函数创建对象，为对象添加属性和方法，然后返回对象。<u>这个模式后来被构造函数模式所取代</u>。
 
     缺点：无法识别对象类型，所有的实例都指向一个原型。
 
@@ -37,9 +37,9 @@ typora-root-url: ..
     var person = createPerson('Alice',18);
     ```
 
-2. 构造函数模式：没有显式创建对象，直接将属性和方法赋给了this对象，没有return语句。
+2. **构造函数模式**：没有显式创建对象，直接将属性和方法赋给了this对象，没有return语句。
     优点：可以识别为一个特定的类型（自定义引用类型） - 像创建内置对象实例一样使用new操作符。
-    缺点：每个方法都要在每个实例上重新创建一遍，无法复用，包括函数。由于函数可以不局限于任何对象（即与对象具有松散耦合的特点），因此没有理由不在多个对象间共享函数。
+    缺点：<u>每个方法都要在每个实例上重新创建一遍，无法复用，包括函数</u>。由于函数可以不局限于任何对象（即与对象具有松散耦合的特点），因此没有理由不在多个对象间共享函数。
 
     ```javascript
     // 构造函数模式
@@ -94,7 +94,6 @@ typora-root-url: ..
     };
     var person1 = new Person();
     ```
-
 
 `JavaScript`主要**通过原型链实现继承**。原型链的构建是通过将一个类型的实例赋值给另一个构造函数的原型实现的。这样，子类型就能够访问超类型的所有属性和方法，这一点与基于类的继承很相似。
 
